# magpie-ai

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
magpie_ai/: TEST_CONFIG_CLIENT.py  __init__.py  client.py  config.py  content_moderation.py  context.py  monitor.py  pii.py  pricing.py  prompt.py  token_extraction.py  validation.py
tests/: test_context.py  test_monitor.py  test_validation.py
triton/: TEST_CONFIG_CLIENT.py  __init__.py  client.py  content_moderation.py  context.py  monitor.py  pii.py  pricing.py  prompt.py  py.typed
triton_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
